Fix error in shadow on small breakpoint

--- a/css/textpattern.css
+++ b/css/textpattern.css
@@ -1954,8 +1954,8 @@ div.plugin-help {
     border-top: 1px solid #fffbed;
     padding: .53846153846154em 1em;
     background: #fff6d3;
-    -webkit-box-shadow: 0 0.154em 0 0.231em rgba(0, 0, 0, 0.15);
-    box-shadow: 0 0.154em 0 0.231em rgba(0, 0, 0, 0.15);
+    -webkit-box-shadow: 0 0.154em 0.231em rgba(0, 0, 0, 0.15);
+    box-shadow: 0 0.154em 0.231em rgba(0, 0, 0, 0.15);
   }
 
   table#edit.edit-pane {
